# ninve

./: Cargo.toml  README.md  flake.nix  run-mpv-cli-codegen.sh  rust-toolchain.toml
.github/workflows/: rust.yml
ci/: build-and-publish-m2  sha256-releases  test-complete  utils.sh
crates/mpv-cli/: Cargo.toml
crates/mpv-cli-codegen/: Cargo.toml
crates/mpv-cli-codegen/src/: main.rs
crates/mpv-cli/src/: binary.rs  instance.rs  ipc.rs  lib.rs  protocol.rs  tests.rs  utils.rs
crates/mpv-cli/src/ipc/: event_bus.rs
crates/mpv-cli/src/protocol/: event.rs  message.rs
crates/mpv-cli/src/protocol/event/: grouped_events.rs
crates/mpv-cli/src/protocol/message/: api.rs  low_level.rs  type_guard.rs
crates/mpv-cli/src/protocol/message/low_level/: property.rs
crates/mpv-cli/src/protocol/message/low_level/property/: codegen.rs  fields.rs
crates/mpv-cli/src/utils/: abort_on_drop.rs
crates/ninve-cli/: Cargo.toml
crates/ninve-cli/src/: main.rs
