[workspace]
resolver = "2"
members = ["crates/ninve-cli", "crates/mpv-cli"]

[workspace.package]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/Niedzwiedzw/ninve"
categories = ["gui", "video", "editor"]
readme = "README.md"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
clap = "4.5.38"
futures = "0.3.31"
futures-util = "0.3.31"
tap = "1.0.1"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
derive_more = "2.0.1"
enum-kinds = "0.5.1"
extension-traits = "2.0.0"
itertools = "0.14.0"
postage = "0.5.0"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
strum = "0.27.1"
tempfile = "3.20.0"
test-log = { version = "0.2.17", default-features = false }
thiserror = "2.0.12"
which = "7.0.3"
