[package]
name = "mpv-cli"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["full"] }
enum-kinds.workspace = true
extension-traits.workspace = true
itertools.workspace = true
postage.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
which.workspace = true

[dev-dependencies]
anyhow.workspace = true
test-log = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
