[package]
name = "mpv-cli"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
crabtime = { git = "https://github.com/wdanilo/crabtime", rev = "2ed856f5f8b85a1e81598d64a36305a1d3f17d01" }
derivative = "2.2.0"
derive_more = { workspace = true, features = ["full"] }
enum-kinds.workspace = true
extension-traits.workspace = true
futures.workspace = true
futures-util.workspace = true
itertools.workspace = true
paste = "1.0.15"
rand.workspace = true
ringbuf = "0.4.8"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["tokio-util"] }
tracing.workspace = true
which.workspace = true

[dev-dependencies]
anyhow.workspace = true
test-log = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
