[package]
name = "ninve"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "cargo", "env"] }
futures.workspace = true
futures-util.workspace = true
mpv-cli.workspace = true
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
tap.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tui-logger = { version = "0.17.3", features = ["crossterm", "tracing-support"] }
ron = "0.10.1"
serde = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["full"] }
