[package]
name = "ninve"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "cargo", "env"] }
futures.workspace = true
futures-util.workspace = true
mpv-cli.workspace = true
ratatui.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
tap.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tui-logger = { workspace = true, features = ["crossterm", "tracing-support"] }
ron.workspace = true
serde = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["full"] }
ordered-float.workspace = true
